k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vnaviewer
  namespace: vnaviewer
  labels:
    app: vnaviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vnaviewer
  template:
    metadata:
      labels:
        app: vnaviewer
    spec:
      containers:
        - name: vnaviewer
          image: ${IMAGE}
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: 16Mi
              cpu: 5m
            limits:
              memory: 64Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
      restartPolicy: Always
