k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vnaviewer
  namespace: vnaviewer
spec:
  type: ClusterIP
  selector:
    app: vnaviewer
  ports:
    - name: http
      port: 80
      targetPort: 80
