k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vnaviewer
  namespace: vnaviewer
spec:
  ingressClassName: traefik
  rules:
    - host: vna.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vnaviewer
                port:
                  number: 80
